@@ -11,7 +11,7 @@ char *fake = N_("How many successive steps to be within tolerance for calculatio
 char *fake = N_("Tolerance for calculating the derivatives of functions");
 char *fake = N_("Tolerance of the ErrorFunction (used for complex values only)");
 char *fake = N_("Tolerance of the GaussDistribution function");
-char *fake = N_("The function used for numerical integration in NumericalIntegral");
+char *fake = N_("The function used for numerical integration in NumericalIntegral (by default CompositeSimpsonsRule)");
 char *fake = N_("Steps to perform in NumericalIntegral");
 char *fake = N_("How many iterations to try for InfiniteSum and InfiniteProduct");
 char *fake = N_("How many successive steps to be within tolerance for InfiniteSum and InfiniteProduct");
@@ -191,6 +191,7 @@ char *fake = N_("Try to calculate an infinite sum for a single parameter functio
 char *fake = N_("Try to calculate an infinite sum for a double parameter function with func(arg,n)");
 char *fake = N_("Try and see if a real-valued function is continuous at x0 by calculating the limit there");
 char *fake = N_("Test for differentiability by approximating the left and right limits and comparing");
+char *fake = N_("Integration by left hand rule");
 char *fake = N_("Calculate the left limit of a real-valued function at x0");
 char *fake = N_("Calculate the limit of a real-valued function at x0.  Tries to calculate both left and right limits.");
 char *fake = N_("Integration by midpoint rule");
@@ -209,7 +210,9 @@ char *fake = N_("Return a function which is the odd periodic extension of f defi
 char *fake = N_("Compute one-sided derivative using five point formula");
 char *fake = N_("Compute one-sided derivative using three-point formula");
 char *fake = N_("Return a function which is the periodic extension of f defined on the interval [a,b]");
+char *fake = N_("Integration by right hand rule");
 char *fake = N_("Calculate the right limit of a real-valued function at x0");
+char *fake = N_("Integration by trapezoid rule");
 char *fake = N_("Compute two-sided derivative using five-point formula");
 char *fake = N_("Compute two-sided derivative using three-point formula");
 char *fake = N_("argument (angle) of complex number");
