@@ -1035,6 +1035,10 @@ EulersMethod (`(x,y)=[(x-y@(1));(x-y@(2))],0,[0;0],3,3)		[2.0;2.0]
 CompositeSimpsonsRule(`(x)=x^2,0,3,100)				9.0
 CompositeSimpsonsRule(`(x)=x^2,3,0,100)				-9.0
 CompositeSimpsonsRule(`(x)=x^2,3,3,100)				0
+LeftHandRule(`(x)=x^2,0,2,4)					1.75
+RightHandRule(`(x)=x^2,0,2,4)					3.75
+MidpointRule(`(x)=x^2,0,2,4)					2.625
+TrapezoidRule(`(x)=x^2,0,2,4)					2.75
 a								a
 a=7;UndefineAll();a						a
 UndefineAll();a							a
