@@ -1,3 +1,12 @@
+Tue Oct 03 23:23:52 2023  Jiri (George) Lebl <jirka@5z.com>
+
+	* lib/calculus/integration.gel: Add TrapezoidRule, LeftHandRule,
+	  RightHandRule
+	
+	* help/C/genius.xml: Document the new functions
+
+	* src/geniustests.txt: add some tests 
+
 Tue Oct 03 22:58:01 2023  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/graphing.c: The shortcut of inputting just the function name
